Redo Gradle Setup